--- a/SMTFFL16.CSS
+++ b/SMTFFL16.CSS
@@ -31,7 +31,7 @@ body {
  background: #eee url(https://googledrive.com/host/0B-hXn8zMMjJFdmtmYm1IdDlEM0E/Background.jpg) repeat-x scroll 0% 0%; 
  }
 .pageheader {
-    background: transparent url(https://googledrive.com/host/0B-hXn8zMMjJFanF4NkhFX0lXOFE) no-repeat bottom left;
+    background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_16_zpsaokgpnrk.png) no-repeat bottom left;
    min-height: 288px}
 .pagebody {
     background: #fff; 
