--- a/SMTFFL16.CSS
+++ b/SMTFFL16.CSS
@@ -28,10 +28,10 @@ Warning (2015 Red) => Flat Red #d8383a
 /*** BODY HEADER IMAGE 9 x 34 (height = 30 main, 4 accent) ***/
 
 body {
- background: #eee url(https://googledrive.com/host/0B-hXn8zMMjJFdmtmYm1IdDlEM0E/Background.jpg) repeat-x scroll 0% 0%; 
+ background: #eee url(http://i709.photobucket.com/albums/ww96/Ramsfan82/Background_zps4qxegyfq.jpg) repeat-x scroll 0% 0%; 
  }
 .pageheader {
-    background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_16_zpsaokgpnrk.png) no-repeat bottom left;
+    background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_zpsh5r3vjbz.png) no-repeat bottom left;
    min-height: 288px}
 .pagebody {
     background: #fff; 
