--- a/SMTFFL16.CSS
+++ b/SMTFFL16.CSS
@@ -29,10 +29,11 @@ Warning (2015 Red) => Flat Red #d8383a
 
 body {
  background: #eee url(http://i709.photobucket.com/albums/ww96/Ramsfan82/Background_zps4qxegyfq.jpg) repeat-x scroll 0% 0%; 
+ min-height: 300px; 
  }
 .pageheader {
     background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_zpsh5r3vjbz.png) no-repeat bottom left;
-   min-height: 188px}
+   min-height: 300px}
 .pagebody {
     background: #fff; 
     max-width:1300px}
