--- a/SMTFFL16.CSS
+++ b/SMTFFL16.CSS
@@ -35,7 +35,7 @@ body {
     background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_zpsh5r3vjbz.png) no-repeat bottom left;
    min-height: 300px}
 .pagebody {
-    background: #fff; 
+    background: #8e94c6; 
     max-width:1300px}
 .pagefooter {
     background: #004a8f; }
