--- a/SMTFFL16.CSS
+++ b/SMTFFL16.CSS
@@ -30,7 +30,7 @@ Warning (2015 Red) => Flat Red #d8383a
 body {
 /***background: #eee url(http://i709.photobucket.com/albums/ww96/Ramsfan82/Background_zps4qxegyfq.jpg) repeat-x scroll 0% 0%; 
  min-height: 300px ***/
- background: #fff; 
+ background: #d5d8eb; 
  }
 .pageheader {
     background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_zpsh5r3vjbz.png) no-repeat bottom left;
