--- a/SMTFFL16.CSS
+++ b/SMTFFL16.CSS
@@ -28,7 +28,7 @@ Warning (2015 Red) => Flat Red #d8383a
 /*** BODY HEADER IMAGE 9 x 34 (height = 30 main, 4 accent) ***/
 
 body {
-background: #d5d8eb url(http://i709.photobucket.com/albums/ww96/Ramsfan82/Background_zps4qxegyfq.jpg) repeat-x scroll 0% 0%; 
+background: #fff url(http://i709.photobucket.com/albums/ww96/Ramsfan82/Background_zps4qxegyfq.jpg) repeat-x scroll 0% 0%; 
  min-height: 300px; 
  }
 .pageheader {
