--- a/SMTFFL16.CSS
+++ b/SMTFFL16.CSS
@@ -28,12 +28,18 @@ Warning (2015 Red) => Flat Red #d8383a
 /*** BODY HEADER IMAGE 9 x 34 (height = 30 main, 4 accent) ***/
 
 body {
-background: #fff url(http://i709.photobucket.com/albums/ww96/Ramsfan82/Background_zps4qxegyfq.jpg) repeat-x scroll 0% 0%; 
+/*background: #fff url(http://i709.photobucket.com/albums/ww96/Ramsfan82/Background_zps4qxegyfq.jpg) repeat-x scroll 0% 0%; */
+background: #fff url(www.googledrive.com/host/0B-hXn8zMMjJFeThxd3JnUTh6czA) repeat-x scroll 0% 0%; 
  min-height: 300px; 
  }
 .pageheader {
-    background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_15_zpsdmdpelvm.png) no-repeat bottom left;
+/*    background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_15_zpsdmdpelvm.png) no-repeat bottom left;
+   min-height: 300px} */
+
+    background: transparent url(www.googledrive.com/host/0B-hXn8zMMjJFQ0FjTFVXUi14Vnc) no-repeat bottom left;
    min-height: 300px}
+
+
 .pagebody {
     background: #fff; 
     max-width:1300px}
