--- a/SMTFFL16.CSS
+++ b/SMTFFL16.CSS
@@ -32,7 +32,9 @@ background: #fff url(http://i709.photobucket.com/albums/ww96/Ramsfan82/Backgroun
  
  }
 .pageheader {
- background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_15_zpsdmdpelvm.png) no-repeat bottom left;
+/* background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_15_zpsdmdpelvm.png) no-repeat bottom left;
+   min-height: 300px} */
+ background: transparent url(https://raw.githubusercontent.com/budman82/SMTFFL/budman82-images/SMT_Header_16.png) no-repeat bottom left;
    min-height: 300px} 
 
 .pagebody {
