--- a/SMTFFL18.css
+++ b/SMTFFL18.css
@@ -1,7 +1,7 @@
 /*  MFL RESPONSIVE MENU
 ========================= */
 .myfantasyleague_menu {border-bottom-color:#0b4ca6;}
-.myfantasyleague_menu,.myfantasyleague_menu ul,.myfantasyleague_menu ul li ul{background:#002043;}
+.myfantasyleague_menu,.myfantasyleague_menu ul,.myfantasyleague_menu ul li ul{background:#fcfe2f;}
 .myfantasyleague_menu ul ul li{background:#002043;}
 .myfantasyleague_menu > ul > li.has-sub > a:after{border-top-color:#fff;}
 .myfantasyleague_menu ul ul > li.has-sub > a:after{border-left-color:#fff;}
