--- a/SMTFFL18.css
+++ b/SMTFFL18.css
@@ -29,5 +29,5 @@
 .myfantasyleague_tabmenu #homepagetabs li.currenttab,.myfantasyleague_tabmenu #homepagetabs li.currenttab:hover {background:#0b4ca6;background-image:none;box-shadow:none;}
 
 /*************** OPTIONAL ***************/
-
+.brandlogo {display: none; }
 
