--- a/SMTFFL18.css
+++ b/SMTFFL18.css
@@ -29,7 +29,7 @@
 .myfantasyleague_tabmenu #homepagetabs li.currenttab,.myfantasyleague_tabmenu #homepagetabs li.currenttab:hover {background:#0b4ca6;background-image:none;box-shadow:none;}
 
 /*************** OPTIONAL ***************/
-/+ .brandlogo {display: none; } +/
+.brandlogo {display: none; } 
 
 .pageheader::before {background:none;}
 
@@ -40,5 +40,5 @@
 background: transparent url(https://raw.githubusercontent.com/budman82/SMTFFL/budman82-images/SMT_Header_18.png) no-repeat bottom left;
    min-height: 300px} 
 
-.pagetitle {display:none;}
+/*.pagetitle {display:none;} */
 
