--- a/SMTFFL18.css
+++ b/SMTFFL18.css
@@ -40,5 +40,5 @@
 background: transparent url(https://raw.githubusercontent.com/budman82/SMTFFL/budman82-images/SMT_Header_18.png) no-repeat bottom left;
    min-height: 300px} 
 
-/*.pagetitle {display:none;} */
+.pagetitle {display:none;} 
 
