--- a/SMTFFL18.css
+++ b/SMTFFL18.css
@@ -37,8 +37,8 @@
 /* background: transparent url(http://i709.photobucket.com/albums/ww96/Ramsfan82/SMT_Header_15_zpsdmdpelvm.png) no-repeat bottom left;
    min-height: 300px} */
 
-background: transparent url(https://raw.githubusercontent.com/budman82/SMTFFL/budman82-images/SMT_Header_18_3.png) no-repeat bottom left;
-   min-height: 300px} 
+background: transparent url(https://raw.githubusercontent.com/budman82/SMTFFL/budman82-images/SMT_Header_18_3.png) no-repeat bottom center;
+   min-height: 300px;} 
 
 .pagetitle {display:none;} 
 
