--- a/SMTFFL.css
+++ b/SMTFFL.css
@@ -1,3 +1,6 @@
+/* LIVE SCORING CSS */
+<link rel="stylesheet" href="https://www.mflscripts.com/mfl-apps/scoreboard/replace-mflScoring/dark.css" type="text/css"/> 
+
 /*  MFL RESPONSIVE MENU
 ========================= */
 .myfantasyleague_menu {border-bottom-color:#0b4ca6;}
